--- a/src/index.css
+++ b/src/index.css
@@ -46,9 +46,9 @@ a {
 /* mui */
 
 /* specific */
-.MuiButtonBase-root.MuiCheckbox-root {
+/* .MuiButtonBase-root.MuiCheckbox-root {
   padding: 0;
-}
+} */
 /* for testing */
 .outlined {
   border: 1px solid red;
